--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/DetallesFactura/Index.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/DetallesFactura/Index.cshtml
@@ -5,155 +5,110 @@
     int numPage = 1;
     int numRegistros = 0;
     int numRegistrosPorPage = 10;
-    int[] tops = { 10, 20, 50, 100, 500, 1000, 10000, -1 };
-    int topActual = Convert.ToInt32(ViewBag.Top);
     List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Factura> facturas = ViewBag.Facturas as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Factura>;
     List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Producto> productos = ViewBag.Producto as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Producto>;
 }
 
-<h1>Buscar</h1>
-<div class="row">
-    <div class="col-md-12">
-        <form asp-action="Index">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label class="control-label">Codigo</label>
-                        <input type="text" class="form-control" name="codigo" />
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h1 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Buscar Detalles de Factura</h1>
+    </div>
+    <div class="card-body">
+        <div class="row ml-4">
+            <div class="col-md-12">
+                <form asp-action="Index">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="control-label">Codigo de Detalles</label>
+                                <input type="text" class="form-control" name="codigo" />
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label class="control-label">Factura</label>
-                        <select name="IdFactura" class="form-control">
-                            <option selected value="0">SELECCIONAR</option>
-                            @foreach (var item in facturas)
-                            {
-                                <option value="@item.IdFactura">@item.NumeroFactura</option>
-                            }
-                        </select>
+
+                    <div class="form-group" style="margin-top: 10px;">
+                        <button type="submit" class="btn btn-primary" style="background-color: #0074D9; color: white;">
+                            <i class="fas fa-search"></i> Buscar
+                        </button>
+
+                        <button type="button" class="btn btn-success" onclick="window.location.href='@Url.Action("Create")'">
+                            <i class="fas fa-plus"></i> Agregar
+                        </button>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label class="control-label">Producto</label>
-                        <select name="IdProducto" class="form-control">
-                            <option selected value="0">SELECCIONAR</option>
-                            @foreach (var item in productos)
-                            {
-                                <option value="@item.IdProducto">@item.Nombre</option>
-                            }
-                        </select>
-                    </div>
-                </div>
+                </form>
             </div>
+        </div>
 
-            <div class="form-group" style="margin-top: 10px;">
-                <button type="submit" class="btn btn-primary" style="background-color: #0074D9; color: white;">
-                    <i class="fas fa-search"></i> Buscar
-                </button>
+        <table class="table table-bordered" width="100%" cellspacing="0">
+            <thead>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CodigoDetalles)</th>
+                    <th>@Html.DisplayNameFor(model => model.Cantidad)</th>
+                    <th>@Html.DisplayNameFor(model => model.Total)</th>
+                    <th>@Html.DisplayNameFor(model => model.IdFactura)</th>
+                    <th>@Html.DisplayNameFor(model => model.IdProducto)</th>
+                    <th colspan="3">Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                        <tr data-page="@numPage">
+                            <td>@Html.DisplayFor(modelItem => item.CodigoDetalles)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Cantidad)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Total)</td>
+                            <td>@facturas.FirstOrDefault(u => u.IdFactura == item.IdFactura)?.NombreCliente</td>
+                            <td>@productos.FirstOrDefault(u => u.IdProducto == item.IdProducto)?.Nombre</td>
 
-                <button type="button" class="btn btn-success" onclick="window.location.href='@Url.Action("Create")'">
-                    <i class="fas fa-plus"></i> Agregar
-                </button>
-            </div>
+                            <td class="botonestabla">
+                                <a class="btn btn-primary" style="background-color: #264DA0; color: white" href="@Url.Action("Edit", new { IdDetalleFactura = item.IdDetallesFactura })">
+                                    <i class="fas fa-pencil-alt"></i> Modificar
+                                </a>
+                            </td>
 
-        </form>
+                            <td class="botonestabla">
+                                <a class="btn btn-info" href="@Url.Action("Details", new { IdDetalleFactura = item.IdDetallesFactura })">
+                                    <i class="fas fa-eye"></i> Detalles
+                                </a>
+                            </td>
+
+                            <td class="botonestabla">
+                                <a class="btn btn-danger" href="@Url.Action("Delete", new { IdDetalleFactura = item.IdDetallesFactura })">
+                                    <i class="fas fa-trash"></i> Eliminar
+                                </a>
+                            </td>
+                        </tr>
+
+                    numRegistros++;
+                    if (numRegistros == numRegistrosPorPage)
+                    {
+                        numPage++;
+                        numRegistros = 0;
+                    }
+                }
+                @{
+                    if (numRegistros == 0)
+                    {
+                        numPage--;
+                    }
+                }
+            </tbody>
+        </table>
+
+        @if (numPage > 1)
+        {
+                <div class="row mt-3" style="overflow:auto">
+                    <div class="col-md-12">
+                        <ul class="pagination paginationjs" data-numpage="@numPage" data-pageactive="1">
+                            <li class="page-item" data-typepage="Previous"><a class="page-link" href="#">Previous</a></li>
+                        @for (var i = 1; i <= numPage; i++)
+                        {
+                                    <li class="page-item" data-page="@i" data-typepage="Item"><a class="page-link" href="#">@i</a></li>
+                        }
+                            <li class="page-item" data-typepage="Next"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                    </div>
+                </div>
+        }
     </div>
 </div>
-
-<table class="table table-responsive paginationjs">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.CodigoDetalles)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cantidad)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Total)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdFactura)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdProducto)
-            </th>
-            <th colspan="3">Acciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr data-page="@numPage">
-                <td>
-                    @Html.DisplayFor(modelItem => item.CodigoDetalles)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cantidad)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Total)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IdFactura)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IdProducto)
-                </td>
-
-                <!-- Resto de tu código para acciones CRUD -->
-
-                <td class="botonestabla">
-                    <a class="btn btn-primary" style="background-color: #264DA0; color: white" href="@Url.Action("Edit", new { IdDetalleFactura = item.IdDetallesFactura })">
-                        <i class="fas fa-pencil-alt"></i> Modificar
-                    </a>
-                </td>
-
-                <td class="botonestabla">
-                    <a class="btn btn-info" href="@Url.Action("Details", new { IdDetalleFactura = item.IdDetallesFactura })">
-                        <i class="fas fa-eye"></i> Detalles
-                    </a>
-                </td>
-
-                <td class="botonestabla">
-                    <a class="btn btn-danger" href="@Url.Action("Delete", new { IdDetalleFactura = item.IdDetallesFactura })">
-                        <i class="fas fa-trash"></i> Eliminar
-                    </a>
-                </td>
-
-
-            </tr>
-
-            numRegistros++;
-            if (numRegistros == numRegistrosPorPage)
-            {
-                numPage++;
-                numRegistros = 0;
-            }
-        }
-        @{
-            if (numRegistros == 0)
-            {
-                numPage--;
-            }
-        }
-    </tbody>
-</table>
-
-@if (numPage > 1)
-{
-    <div class="row" style="overflow:auto">
-        <div class="col-md-12">
-            <ul class="pagination paginationjs" data-numpage="@numPage" data-pageactive="1">
-                <li class="page-item" data-typepage="Previous"><a class="page-link" href="#">Previous</a></li>
-                @for (var i = 1; i <= numPage; i++)
-                {
-                    <li class="page-item" data-page="@i" data-typepage="Item"><a class="page-link" href="#">@i</a></li>
-                }
-                <li class="page-item" data-typepage="Next"><a class="page-link" href="#">Next</a></li>
-            </ul>
-        </div>
-    </div>
-}
